added first part of methodology

--- a/documents/Final Report/Intro.tex
+++ b/documents/Final Report/Intro.tex
@@ -14,7 +14,7 @@ As the literature reveals more and more ways in which this divergence harms our 
 
 \section{Gap in the Market}
 
-Light has been shown to have serious ramifications on many facets of life: excess blue light in the evenings causing sleep deficiency; lighting affecting lifestyle-related diseases; insufficient blue-light exposure being a risk factor for depression and other mood disorders; and plenty more that are discussed in chapter \ref{Chap:Lit}.
+Light has been shown to have serious ramifications on many facets of life: excess \gls{BlueLight} in the evenings causing sleep deficiency; lighting affecting lifestyle-related diseases; insufficient \gls{BlueLight} exposure being a risk factor for depression and other mood disorders; and plenty more that are discussed in chapter \ref{Chap:Lit}.
 
 Chapter \ref{Lit:solutions} outlines why the existing products attempting to solve this problem are not appropriate, and thus why a new solution must be developed. 
 
@@ -26,7 +26,7 @@ This project set out to try to develop an affordable, modular, broad-application
 
 There were 2 main aims that the device set out to achieve: 'To produce an affordable device that replicates the visual solar spectrum as closely as is feasible' and 'to validate the device by measuring the output spectra across the day'.
 
-Initially, further aims included developing the device as a product by improving user experience through user interface, web apps, and other expanded functionality. This would have been researched using qualitative methods such as opinion surveys to assess the interest in the device in the consumer market. These aims were set out as stretch goals that could be undertaken when the 2 main aims had been completed.
+Initially, further aims included developing the device as a product by improving user experience through user interface, web apps, and other expanded functionality. This would have been researched using qualitative methods such as opinion surveys to assess the interest in the device in the consumer market. These aims were set out as stretch goals that could be undertaken when the two main aims had been completed.
 
 \subsection{Objectives}
 
@@ -36,7 +36,7 @@ Initially, further aims included developing the device as a product by improving
 \label{Objectives}
 \end{figure*}
 
-The objectives used to achieve the aims have been a lot more dynamic throughout the project. The initial plan of producing and testing 2 rounds of printed circuit boards (PCBs) before using these to validate the spectral outputs was heavily influenced by the pandemic. See Fig \ref{Objectives}.
+The objectives used to achieve the aims have been dynamic throughout the project. The initial plan of producing and testing 2 rounds of \acrfull{pcbs} before using these to validate the spectral outputs was heavily influenced by the pandemic. See Fig \ref{Objectives}.
 
 Both N. Appleton and V. Halenka were involved in the design of the hardware, as it was a useful device for both areas of research. The success of these devices was assessed against the requirements specification (Appendix \ref{App:Req} and is discussed in chapter (REF).
 
@@ -44,7 +44,7 @@ One of the most important aims of the project from the beginning was the develop
 
 \subsection{Scope}
 
-Keeping the scope of the project relatively flexible was an important factor due to the pandemic. Designing the hardware, which was scheduled to be done by February, was severely impacted by the lockdown that begun on the 1st of January 2021. 
+Keeping the scope of the project relatively flexible was an important factor due to the pandemic. Designing the hardware, which was scheduled to be done by February, was severely impacted by the lockdown that began on the 1st of January 2021. 
 
 Due to the ``modular'' construction of the aims, the qualitative, product-based research and much of the usability development had to be left for future research and development. In removing these aims from the project, it allowed the primary objective to be successfully achieved.
 
@@ -78,7 +78,7 @@ It was important that the experimentation could be completed by the end date of 
 From the beginning of the project, a focus has been placed on creating effective contingencies to ensure that the main experimentations would give results. This has been especially true within a hardware-based project during the pandemic. The flexible aims have been discussed earlier, but many other contingencies were put in place. Building a simulator was a big priority to ensure that results could be gathered in the event of failure to obtain hardware.
 
 \paragraph{Risks and Mitigation}
-The project has been focused on de-risking throughout by front-loading the highest-risk tasks to ensure that, in the case of failure, objectives can still be met. For example, hardware development happened early on in the project to allow time to overcome any of the issues that came up.
+The project has been focused on de-risking throughout by front-loading the highest-risk tasks to ensure that, in the case of failure, objectives can still be met. For example, hardware development happened early on in the project to allow time to overcome any of the issues that arose.
 
 This method of risk identification and mitigation proved extremely effective during the pandemic, when many of the unwanted outcomes came to pass.
 
@@ -87,7 +87,7 @@ The risk-assessment and resources forms have been kept up-to-date throughout the
 \paragraph{Reflection}
 The successful completion of all the main outcomes of the project is a testament to the good planning that has been observed from the beginning.
 
-The continued planning  and de-risking, alongside the effective use of supervision, have ensured that all the primary aims were achieved within the timeframe. This, in turn, allowed the adherence to milestones and deadlines, including the progress review. Contingencies played a big role in delivery of the project, and are discussed further in chapter \ref{}.
+The continued planning  and de-risking, alongside the effective use of supervision, have ensured that all the primary aims were achieved within the timeframe. This, in turn, allowed the adherence to milestones and deadlines, including the progress review. Contingencies played a large role in delivery of the project, and are discussed further in chapter \ref{}.
 
 Mitigating any potential risks through the use of the risk-assessment (Appendix \ref{App:Risk} early in the project allowed for progress to be made safely and appropriately. 
 
